_less/screen.less
/* ... */
@font-face{
	font-family:'UbuntuBoldItalic';
	src:url('/font/ubuntu-bi-webfont.eot');
	src:url('/font/ubuntu-bi-webfont.eot?iefix') format('eot'),
	url('/font/ubuntu-bi-webfont.woff') format('woff'),
	url('/font/ubuntu-bi-webfont.ttf') format('truetype'),
	url('/font/ubuntu-bi-webfont.svg') format('svg');
	font-weight:normal;
	font-style:normal;
}

.alert-message{
	background-color:#fff;
}
.alert-message>div{
	background-color:#fff;
	background-color:#c5251f;
}
.alert-message.error>div{
	background-color:#c5251f;
}
.alert-message.success>div{
	background-color:#489e48;
}
.alert-message.info>div{
	background-color:#517ea7;
}
.alert-message>div>div{
	margin:auto;
	width:960px;
	padding:10px;
}
.alert-message,.alert-message a,.alert-message a:link,.alert-message a:active,.alert-message a:visited{
	color:#fff;
}

#head{
	margin:22px 0px 10px 0px;
}
#head>div{
	max-width:1050px;
	margin:auto;
	position:relative;
}
#head.home {
	text-align:center;
}
#head.home #logo {
	text-align: center;
}
#body{
	max-width:1050px;
	margin:auto;
	position:relative;
}

#langselect{
	display:none;
}
#lang,#lang li,#lang ul{
	display:block;
	list-style:none;
	padding:0px;
	margin:0px;
	text-align:right;
	cursor:pointer;
	z-index:1000;
}
#lang{
	position:absolute;
	right:5px;
	top:0px;
	height:30px;
	border-left:1px solid transparent;
	border-right:1px solid transparent;
	border-top:1px solid transparent;
}
#lang>li>ul{
	display:none;
	right:-1px;
	top:28px;
	position:absolute;
	background-color:#fff;
	margin-left:-5px;
	padding-bottom:4px;
	border-left:1px solid #ebebeb;
	border-right:1px solid #ebebeb;
	border-bottom:1px solid #ebebeb;
}
#lang:hover{
	border-left:1px solid #ebebeb;
	border-right:1px solid #ebebeb;
	border-top:1px solid #ebebeb;
	background-color:#fff;
}
#lang:hover>li>ul{
	display:block;
}
#lang>li>a,#lang>li>a:link,#lang>li>a:visited,#lang>li>a:active{
	padding:4px 8px;
}
#lang a,#lang a:link,#lang a:visited,#lang a:active{
	padding:2px 8px;
	text-decoration:none;
	color:#000;
	font-size:115%;
	width:100px;
	display:inline-block;
}
#lang>li>ul>li>a,#lang>li>ul>li>a:link,#lang>li>ul>li>a:visited,#lang>li>ul>li>a:active{
	color:#5c5c5c;
}
#lang>li>ul>li:hover>a{
	color:#000;
}

#logo{
	display:block;
	margin-left:40px;
	width:191px;
	height:40px;
}

#menumobile{
	display:none;
}

#menufor{
	margin:0px;
	position:absolute;
	top:8px;
	left:250px;
	padding:0px;
	height:35px;
}
#menufor li{
	list-style:none;
	float:left;
	padding:0px;
	margin:0px 8px;
	border-radius:5px;
	-webkit-left-radius:5px;
}
#menufor li a,#menufor li a:active,#menufor li a:visited,#menufor li a:link{
	font-family:'UbuntuBold', sans-serif;
	font-size:105%;
	display:block;
	text-decoration:none;
	padding:6px 8px 3px 8px;
	color:#2c6fad;
	white-space:nowrap;
}
#menufor>li:hover,#menufor>li.active{
	background-color:#2c6fad;
}
#menufor>li:hover>a,#menufor>li.active>a{
	border-radius:5px;
	-webkit-left-radius:5px;
	color:#fff;
}

#menu{
	padding:0px;
	margin:12px auto 0px 32px;
}
#menu li{
	list-style:none;
	display:inline-block;
	zoom:1;
	*display:inline;/*IE7 support*/
	margin:0px;
}
#menu li a,#menu li a:active,#menu li a:visited,#menu li a:link{
	font-family:'Ubuntu', sans-serif;
	display:block;
	color:#6a6a6a;
	text-decoration:none;
	padding: 8px 10px;
	border: 2px solid transparent;
	white-space:nowrap;
}
#menu li:hover a,#menu li.active a{
	color:#000;
	background-color:#fff;
	border:2px solid #ebebeb;
	border-radius:3px;
	-webkit-border-radius:3px;
}
	
#content{
	position:relative;
	padding:20px 265px 30px 30px;
	margin: 0px 5px;
	max-width:780px;
	text-align:justify;
	background-color:#fff;
	min-height:400px;
	border:2px solid #ebebeb;
	border-radius: 6px;
	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
}
#content.wide{
	padding:20px 40px 30px 30px;
	max-width:990px;
}

#rightbox{
	width:210px;
	position:absolute;
	right:30px;
	top:20px;
	border-radius:5px;
	-webkit-border-radius:5px;
	padding:5px;
}
#rightbox.wide{
	display:none;
}

#choose>a:first-child,#before>a:first-child,#support>a:first-child{
	padding:10px 8px 10px 48px;
	color:#fff;
	display:block;
	text-align:left;
	margin-bottom:10px;
	text-decoration:none;
	font-weight:bold;
	border-radius:5px;
	-webkit-border-radius:5px;
}
#choose img,#before img,#support img{
	vertical-align:middle;
	margin-right:8px;
	margin-left:-40px;
}
#before>a:first-child,#support>a:first-child{
	background-color:#2c6fad;
	border:1px solid #20598f;
	background-image:linear-gradient(bottom, #20598f 14%, #2c6fad 70%);
	background-image:-o-linear-gradient(bottom, #20598f 14%, #2c6fad 70%);
	background-image:-moz-linear-gradient(bottom, #20598f 14%, #2c6fad 70%);
	background-image:-webkit-linear-gradient(bottom, #20598f 14%, #2c6fad 70%);
	background-image:-ms-linear-gradient(bottom, #20598f 14%, #2c6fad 70%);
}
#choose>a:first-child{
	padding:12px 8px 12px 48px;
	background-color:#e78406;
	border:1px solid #d57700;
	background-image:linear-gradient(bottom, #d57700 14%, #e78406 70%);
	background-image:-o-linear-gradient(bottom, #d57700 14%, #e78406 70%);
	background-image:-moz-linear-gradient(bottom, #d57700 14%, #e78406 70%);
	background-image:-webkit-linear-gradient(bottom, #d57700 14%, #e78406 70%);
	background-image:-ms-linear-gradient(bottom, #d57700 14%, #e78406 70%);
}
#choose>a:first-child:hover,#before>a:first-child:hover,#support>a:first-child:hover{
	background-image:none;
}

#footer{
	position:relative;
	top:-2px;
	padding:20px 0px 20px 40px;
	text-align:left;
	font-size:94%;
	max-width:1050px;
}
#footer>div{
	padding-top:6px;
}

/*Styles specific to elements in pages*/

.index,.index ul,.index li{
	list-style:none;
	padding:0px;
	margin:0px;
}
.index{
	padding:20px;
	border:2px dashed #4892b2;
	display:inline-block;
}
.index>li>a{
	font-weight:bold;
}
.index>ul{
	padding:20px 0px 20px 20px;
}
.index a,.index a:link,.index a:active,.index a:visited{
	display:block;
	text-decoration:none;
	line-height:1.5em;
}
/* ... */

